rt/test/old/errors/001/test.volt
//T compiles:no
//T error-message:8:9: error: unidentified identifier 'y'.
module test;

int main()
{
	int x;
	return y;
}

